# iss-oscar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
plots/: makeplots.py
src/: CMakeLists.txt  emissionfunction.cpp  main.cpp  readindata.cpp
surface/: .gitignore
